--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ header_pages:
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://embeddedgo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username:
+twitter_username: EmbeddedGo
 github_username: embeddedgo
 youtube_username: channel/UCAW4PLMDGO7_vY4sCG0jg6Q
 google_group: embeddedgo
