--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ google_group: embeddedgo
 google_analytics: UA-116411758-2
 
 # Build settings
-markdown: kramdown
+markdown: GFM
 theme: minima
 plugins:
   - jekyll-feed
