add link to reddit

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ twitter_username: EmbeddedGo
 github_username: embeddedgo
 #youtube_username: channel/UCAW4PLMDGO7_vY4sCG0jg6Q
 google_group: embeddedgo
+reddit: EmbeddedGo
 #disqus:
 #  shortname: ziutek
 google_analytics: UA-116411758-2
