add supported hardware page

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ show_excerpts: true
 excerpt_separator: <!--more-->
 header_pages:
   - getting_started.md
+  - supported_hardware.md
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://embeddedgo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
